# Minigrim0

./: .dockerignore  .gitignore  README.md  app.py  build.sh  config.py  manage.py  manage.sh  misc.md  poetry.conf  pyproject.toml  shell.nix  watch_sass.sh
apps/: minigrim0.py  utils.py
blog/: admin.py  api.py  autocomplete.py  forms.py  models.py  serializers.py  urls.py  views.py  widgets.py
blog/migrations/: 0001_initial.py  0002_post_published.py  0002_post_short_description.py  0003_alter_post_short_description.py
devlog/: admin.py  apps.py  models.py  urls.py  views.py
devlog/migrations/: 0001_initial.py  0002_repository_active_alter_repository_description_and_more.py  0003_tag_devlog.py
docker/: docker-compose.dev.yml  docker-compose.yml  flask.dockerfile  tools.dockerfile  web.dev.dockerfile  web.dockerfile
docker/nginx/: nginx.conf
docker/plausible/: clickhouse-config.xml
minigrim0/: admin.py  api.py  asgi.py  context_processors.py  models.py  secrets.py  settings.py  urls.py  utils.py  views.py  wsgi.py
minigrim0/assets/css/: base.css  base.css.map  blog.css  blog.css.map  codeblock.css  cv.css  cv.css.map  form.css  home.css  home.css.map  project.css  project.css.map  style.css
minigrim0/assets/fonts/: README.md
minigrim0/assets/js/: clipboard.js  smoothscroll.js
minigrim0/assets/tex/: cv.tex
minigrim0/management/commands/: fetch_repositories.py  generate_fake_data.py
minigrim0/migrations/: 0001_initial.py  0001_initial_squashed_0006_repository.py  0002_alter_education_end_date_alter_education_start_date_and_more.py  0002_remove_competition_order_remove_education_order_and_more.py  0002_remove_repository_id_alter_repository_url.py  0003_alter_competition__order_alter_education__order_and_more.py  0003_alter_competition_description_and_more.py  0003_delete_repository.py  0004_alter_education_place_alter_experience_link_and_more.py  0004_alter_skill_level.py  0005_alter_language_level.py  0005_alter_skill_details.py  0006_cvprofile.py  0007_cvprofile_professional_summary.py  0008_skillcategory_skill_category.py  0009_remove_skill_level_skillsubcategory_and_more.py  0010_skillcategory__order.py
minigrim0/templates/: cv.tex  error.html  new_template.tex  robots.txt
minigrim0/templates/blog/: blog.html  code_block.html  create.html  detail.html  index.html  list.html  post_detail.html  update.html
minigrim0/templates/layouts/: app.html  footer.html  header.html
minigrim0/templates/minigrim0/: cv.html  index.html  projects.html
minigrim0/templatetags/: markdown.py
static/json/: cv.json
templates/: 404.html
templates/layouts/: app.html  footer.html  header.html
templates/minigrim0/: cv.html  index.html  projects.html
tools/: Cargo.toml
tools/projects/: Cargo.toml
tools/projects/src/: main.rs
tools/sass/: _variables.scss  base.scss  blog.scss  cv.scss  home.scss  project.scss
tools/src/: main.rs
tools/style/: base.scss  blog.scss  cv.scss  project.scss
(+6 files in other folders)
