[tool.poetry]
name = "minigrim0"
version = "0.1.0"
description = "Minigrim0's website"
authors = ["Minigrim0 <grimauflorent@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
django-environ = "^0.11.2"
coloredlogs = "^15.0.1"
psycopg2 = "^2.9.9"
django-colorfield = "^0.11.0"
faker = "^28.4.1"
redis = "^5.0.8"
pygments = "^2.18.0"
mistune = "^3.0.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pylint = "^2.17.4"
black = "^23.7.0"

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
