[package]
name = "github-project-fetcher"
description = "A tool to fetch GitHub projects and store them in a Redis database."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colog = "1.3.0"
json = "0.12.4"
log = "0.4.22"
octocrab = "0.44.1"
redis = "0.32.5"
serde = "1.0.180"
serde_derive = "1.0.180"
serde_json = "1.0.104"
tokio = { version = "1", features = ["full"] }
